--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </div>
         <div class="benefit">
             <h3>Brand Awareness</h3>
-            <img src="brand-awareness.png" alt="Black icon of a person with a lightbulb for a head emitting waves." />
+            <img src="./assets/images/-awareness.png" alt="Black icon of a person with a lightbulb for a head emitting waves." />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
